--- a/assets/parks/DayTours/KilimanjaroDayTrip.html
+++ b/assets/parks/DayTours/KilimanjaroDayTrip.html
@@ -149,19 +149,25 @@
                 <div class="wrapper">
                     <div class="content23-head text-center">
                         <h3>ABOUT US</h3>
-                        <p>Kilimangeti Tanzania Safari is Tanzania-based tour company running quality Mountain Treks, Wildlife safaris, and Zanzibar beach vacations. We
-                        are well equipped with multiple skills to ensure that client ’s satisfaction is our first priority. Our goal is to offer
-                        quality trips and to prepare individuals fully on all aspects of your chosen adventure. We work with reliable teams that
-                        are ready at all times to give the clients the professional services and to make every trip safe and high quality.</p>
+                        <p>Kilimangeti Tanzania Safari is Tanzania-based tour company running quality Mountain Treks,
+                            Wildlife safaris, and Zanzibar beach vacations. We
+                            are well equipped with multiple skills to ensure that client ’s satisfaction is our first
+                            priority. Our goal is to offer
+                            quality trips and to prepare individuals fully on all aspects of your chosen adventure. We
+                            work with reliable teams that
+                            are ready at all times to give the clients the professional services and to make every trip
+                            safe and high quality.</p>
                     </div>
-                    <div class="d-grid content23-col-2 text-center" >
+                    <div class="d-grid content23-col-2 text-center">
                         <div class="content23-grid back-cont-1" data-aos="fade-in">
                             <div class="content-texts">
                                 <h4><a href="book.html">Why choose us!</a></h4>
-                                <p>Kilimangeti Tanzania Safari knows that safety, quality, and value are the most important factors when choosing your adventure. Our promise is to
-                                provide a service that supports you to your adventure from start to finish.</p>
-                                <p>From your first contact and pre-trip planning to your actual adventure, we provide you with helpful information and
-                                advice.</p>
+                                <p>Kilimangeti Tanzania Safari knows that safety, quality, and value are the most
+                                    important factors when choosing your adventure. Our promise is to
+                                    provide a service that supports you to your adventure from start to finish.</p>
+                                <p>From your first contact and pre-trip planning to your actual adventure, we provide
+                                    you with helpful information and
+                                    advice.</p>
                             </div>
                         </div>
                         <div class="content23-grid back-cont-2" data-aos="fade-up">
@@ -226,15 +232,16 @@
                     <div class="d-grid">
                         <div class="content-left-sec">
                             <a href="Tanzania.html">
-                                <img src="assets/destinations/da6.jpg"
-                                    class="img img-responsive img-fluid" alt=""></a>
+                                <img src="assets/destinations/da6.jpg" class="img img-responsive img-fluid" alt=""></a>
                         </div>
                         <div class="content-photo-left">
                             <h4>We help you to Explore Tanzania, Kenya & Zanzibar
                             </h4>
-                            <p>The best affordable tours in Tanzania and adventure trips specialists. We are top experts in Africa offer cheapest
-                            vacation packages. We arrange best tailor-made tours and budget safari packages including camping safari, lodge safari,
-                            luxury safari, and affordable shared safari.</p>
+                            <p>The best affordable tours in Tanzania and adventure trips specialists. We are top experts
+                                in Africa offer cheapest
+                                vacation packages. We arrange best tailor-made tours and budget safari packages
+                                including camping safari, lodge safari,
+                                luxury safari, and affordable shared safari.</p>
                             <div class="content-photo-grid">
                                 <div class="content-photo-bot1 content-photo-gap">
                                     <h5><a href="Zanzibar.html"><span class="fa fa-check-circle-o"
@@ -242,14 +249,17 @@
                                 </div>
                                 <div class="content-photo-bot1">
                                     <h5>
-                                    <a href="Tanzania.html"><span class="fa fa-check-circle-o"
-                                                aria-hidden="true"></span>Tanzania Safaris</a></h5>
+                                        <a href="Tanzania.html"><span class="fa fa-check-circle-o"
+                                                aria-hidden="true"></span>Tanzania Safaris</a>
+                                    </h5>
                                 </div>
                                 <div class="content-photo-bot1">
-                                    <h5><a href="Kenya.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Kenya Safaris</a></h5>
+                                    <h5><a href="Kenya.html"><span class="fa fa-check-circle-o"
+                                                aria-hidden="true"></span>Kenya Safaris</a></h5>
                                 </div>
                                 <div class="content-photo-bot1">
-                                    <h5><a href="kilimanjaro.html"><span class="fa fa-check-circle-o" aria-hidden="true"></span>Kilimanjaro Climb Packages</a></h5>
+                                    <h5><a href="kilimanjaro.html"><span class="fa fa-check-circle-o"
+                                                aria-hidden="true"></span>Kilimanjaro Climb Packages</a></h5>
                                 </div>
                             </div>
                         </div>
@@ -409,8 +419,4 @@
         </section>
         <!-- //w3l-footer-16 -->
     </body>
-
-
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/about.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:46 GMT -->
-
 </html>
