--- a/coming-soon.html
+++ b/coming-soon.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kilimangeti Tanzania Safari a Travel Category Responsive Web Template | Coming Soon </title>
+    <title>Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -61,12 +61,8 @@
         ga('require', 'urlChangeTracker');
         ga('send', 'pageview');
     </script>
-    <script async src='../../../../../../js/autotrack.js'></script>
     <meta name="robots" content="noindex">
-
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
-
         <section class="w3l-forms-30">
             <div class="covers-main">
                 <div class="wrapper">
@@ -80,7 +76,8 @@
                         </div>
                         <div class="main-cover">
                             <h4 class="cover-para">Coming Soon</h4>
-                            <p class="form-text">Our Website is about to launch pretty soon. Be the first to know about
+                            <p class="form-text">Our Kilimangeti Tanzania Safari is about to launch pretty soon. Be the
+                                first to know about
                                 that
                                 and
                                 subscribe today.</p>
