--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <title> Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
 </head>
 
@@ -58,7 +58,7 @@
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
+        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
         <!-- header -->
         <div class="w3l-headers-9">
             <header>
@@ -80,7 +80,6 @@
                                 <ul class="menu">
                                     <li><a href="index.html" class="link-nav">Home</a></li>
                                     <li><a href="about.html" class="link-nav">About</a></li>
-                                    <li><a href="services.html">Services</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
                                         <label for="drop-2" class="toggle toogle-2">Safaris <span
@@ -170,8 +169,8 @@
                         <div class="grid">
                             <div class="adress-lavi-info">
                                 <h3>Visit Us</h3>
-                                <p>The company name
-                                    <br>Addison Township, 2nd floor, <br>California, USA.
+                                <p> Kilimangeti Tanzania Safari
+                                    <br>Addison Township, 2nd floor, <br>Arusha Tanzania
                                 </p>
                             </div>
                             <div class="adress-lavi-info">
@@ -265,6 +264,6 @@
     </body>
 
 
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:03:19 GMT -->
+    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/contact.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:03:19 GMT -->
 
 </html>
