--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@ Author URL: http://Kilimangeti Tanzania Safari.com
 <html lang="en">
 
 
-<!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
+<!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/faq.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 
@@ -76,7 +76,7 @@ Author URL: http://Kilimangeti Tanzania Safari.com
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
+        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
         <!-- Demo bar start -->
         <div id="w3lDemoBar" class="w3l-demo-bar">
             <a href="https://Kilimangeti Tanzania Safari.com/?p=37691" ga-on="click"
@@ -487,6 +487,6 @@ Author URL: http://Kilimangeti Tanzania Safari.com
     </body>
 
 
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/faq.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
+    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/faq.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
 
 </html>
