--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kilimangeti Tanzania Safari a Travel Category Responsive Web Template | Gallery </title>
+    <title>Kilimangeti Tanzania Safari </title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -67,7 +67,7 @@
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
+        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
         <!-- header -->
         <div class="w3l-headers-9">
             <header>
@@ -98,7 +98,6 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
                                         <ul class="first-dropdwon">
-                                            <li><a href="services.html">Services</a></li>
                                             <li><a href="pricing.html">Pricing</a></li>
                                             <li><a href="gallery.html">Gallery</a></li>
                                             <li><a href="team.html">Team</a></li>
@@ -269,6 +268,6 @@
     </body>
 
 
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/gallery.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:49 GMT -->
+    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/gallery.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:49 GMT -->
 
 </html>
