--- a/kilimanjaro.html
+++ b/kilimanjaro.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <title> Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -62,6 +62,7 @@
         ga('send', 'pageview');
     </script>
     <meta name="robots" content="noindex">
+
     <body>
         <!-- header -->
         <div class="w3l-headers-9">
@@ -84,7 +85,6 @@
                                 <ul class="menu">
                                     <li><a href="index.html" class="link-nav">Home</a></li>
                                     <li><a href="about.html" class="link-nav">About</a></li>
-                                    <li><a href="services.html">Services</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
                                         <label for="drop-2" class="toggle toogle-2">Safaris <span
@@ -95,7 +95,6 @@
                                         <ul class="first-dropdwon">
                                             <li><a href="Tanzania.html">Tanzania</a></li>
                                             <li><a href="Zanzibar.html">Zanzibar</a></li>
-                                            <li><a href="Kenya.html">Kenya</a></li>
                                         </ul>
                                     </li>
                                     <li>
