--- a/timeline.html
+++ b/timeline.html
@@ -63,7 +63,7 @@
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
+        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
         <!-- header -->
         <div class="w3l-headers-9">
             <header>
@@ -297,6 +297,6 @@
     </body>
 
 
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/timeline.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
+    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/timeline.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
 
 </html>
