--- a/Kenya.html
+++ b/Kenya.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <title> Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
 </head>
 
@@ -58,7 +58,7 @@
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
+        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
         <!-- header -->
         <div class="w3l-headers-9">
             <header>
@@ -80,7 +80,6 @@
                                 <ul class="menu">
                                     <li><a href="index.html" class="link-nav">Home</a></li>
                                     <li><a href="about.html" class="link-nav">About</a></li>
-                                    <li><a href="services.html">Services</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
                                         <label for="drop-2" class="toggle toogle-2">Safaris <span
@@ -204,7 +203,8 @@
                         <h4 class="cal-action-text-29">
                             <a href="book.html">Buy a Tour Without Leaving Your Home</a>
                         </h4>
-                        <p class="sub-paragraph actioncall-29">Using our website, you can easily find and book any tour
+                        <p class="sub-paragraph actioncall-29">Using our Kilimangeti Tanzania Safari, you can easily
+                            find and book any tour
                             you
                             want. Mobile users will definitely enjoy our app available on all devices.</p>
                         <a href="book.html" class="buttonbg">Book Now</a>
