--- a/Tanzania.html
+++ b/Tanzania.html
@@ -6,8 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <title> Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="assets/css/style-freedom.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -77,7 +83,6 @@
                                 <ul class="menu">
                                     <li><a href="index.html" class="link-nav">Home</a></li>
                                     <li><a href="about.html" class="link-nav">About</a></li>
-                                    <li><a href="services.html">Services</a></li>
                                     <li>
                                         <!-- First Tier Drop Down -->
                                         <label for="drop-2" class="toggle toogle-2">Safaris <span
@@ -99,7 +104,7 @@
                                         <input type="checkbox" id="drop-3" />
                                         <ul>
                                             <li><a href="kilimanjaro.html"> Mount Kilimanjaro</a></li>
-                                            <li><a href=""> Mount Kilimanjaro</a></li>
+                                            <li><a href="whatforkili.html"> What for Kili</a></li>
                                             <li><a href="meruclimb.html">Mount Meru </a></li>
                                         </ul>
                                     </li>
@@ -110,9 +115,9 @@
                                                 class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-4" />
                                         <ul>
-                                            <li><a href="Kili-what to know.html">Day Tour</a></li>
-                                            <li><a href="Kili-what to know-single.html">Cycling Tour </a></li>
-                                            <li><a href="Kili-what to know-cart.html">Maasai Cultural Tour</a></li>
+                                            <li><a href="./assets/parks/daytour.html">Day Tour</a></li>
+                                            <li><a href="./assets/parks/cycling.html">Cycling Tour </a></li>
+                                            <li><a href="Maasai.html">Maasai Cultural Tour</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html" class="link-nav">Contact</a></li>
@@ -127,19 +132,43 @@
             </header>
             <!-- //header -->
         </div>
-        <!-- inner banner -->
-        <section class="w3l-inner-banner-main">
-            <div class="banner-9">
-                <div class="wrapper">
-                    <ul class="breadcrumbs-custom-path">
-                        <li><a href="index.html">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a>
-                        </li>
-                        <li><a href="#pages">Pages <span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
-                        <li class="active">Tanzania</li>
-                    </ul>
+        <!-- Carousel wrapper -->
+        <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item  active">
+                    <img class="d-block w-100" 
+                       src="./assets/parks/DayTours/images/img6.jpg"
+                    alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" 
+                    src="./assets/parks/DayTours/images/img4.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" 
+                    src="./assets/parks/DayTours/images/img3.png" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100"  
+                     src="./assets/parks/images/pa3.jpg" alt="Third slide">
                 </div>
             </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- //Carousel wrapper -->
         <!-- //covers -->
         <!-- w3l-text-22 -->
         <section class="w3l-grids-6">
@@ -153,41 +182,42 @@
                         dream adventures come true.
                     </p>
                     <div class="d-grid grid-column-3">
-                        <div class="gd-innf">
+                        <div class="gd-innf" data-aos="fade-up">
                             <a href="./assets/parks/ArushaPark.html">
                                 <img class="img-responsive" src="./assets/parks/images/pa1.jpg" alt="image"></a>
-                            <h3><a href="./assets/parks/ArushaPark.html" class="vv-link">Arusha National Park</a></h3>
+                            <p><a href="./assets/parks/ArushaPark.html" class="vv-link">Arusha National Park</a></p>
                         </div>
-                        <div class="gd-innf">
+                        <div class="gd-innf" data-aos="fade-right">
                             <a href="./assets/parks/serengetiPark.html"><img class="img-responsive"
                                     src="assets/parks/images/pa3.jpg" alt="image"></a>
-                            <h3><a href="./assets/parks/serengetiPark.html" class="vv-link">Serengeti National Park</a>
-                            </h3>
+                            <p><a href="./assets/parks/serengetiPark.html" class="vv-link">Serengeti National Park</a>
+                            </p>
                         </div>
-                        <div class="gd-innf">
+                        <div class="gd-innf" data-aos="fade-up">
                             <a href="kilimanjaro.html"><img class="img-responsive" src="assets/parks//images/ba8.jpg"
                                     alt="image"></a>
-                            <h3><a href="kilimanjaro.html" class="vv-link">Kilimanjaro National Park</a></h3>
+                            <p><a href="kilimanjaro.html" class="vv-link">Kilimanjaro National Park</a></p>
                         </div>
                     </div>
                     <div class="d-grid grid-column-3 second-grids">
                         <div class="gd-innf">
                             <a href="./assets/parks/ngorongoroPark.html"><img class="img-responsive"
                                     src="assets/parks/images/ba9.jpg" alt="image"></a>
-                            <h3><a href="./assets/parks/ngorongoroPark.html" class="vv-link">Ngorongoro National
-                                    Park</a></h3>
+                            <p>
+                                <a href="./assets/parks/ngorongoroPark.html" class="vv-link">Ngorongoro National
+                                    Park</a></p>
                         </div>
-                        <div class="gd-innf">
+                        <div class="gd-innf" data-aos="fade-bottom">
                             <a href="./assets/parks/lmanyara.html"><img class="img-responsive"
                                     src="assets/parks/images/pa2.jpg" alt="image"></a>
-                            <h3><a href="./assets/parks/lmanyara.html" class="vv-link">Lake Manyara National Park</a>
-                            </h3>
+                            <p><a href="./assets/parks/lmanyara.html" class="vv-link">Lake Manyara National Park</a>
+                            </p>
                         </div>
-                        <div class="gd-innf">
+                        <div class="gd-innf" data-aos="fade-up">
                             <a href="./assets/parks/tarangirePark.html"><img class="img-responsive"
                                     src="assets/parks/images/ba6.jpg" alt="image"></a>
-                            <h3><a href="./assets/parks/tarangirePark.html" class="vv-link">Tarangire National Park</a>
-                            </h3>
+                            <p><a href="./assets/parks/tarangirePark.html" class="vv-link">Tarangire National Park</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -195,21 +225,20 @@
             <!-- //grids -->
         </section>
         <!-- Call to action 29 block -->
-        <section class="w3l-call-to-action-29">
-            <div class="cal-action-29">
-                <div class="wrapper">
-                    <div class="action-main-29 align-center">
-                        <h4 class="cal-action-text-29">
-                            <a href="book.html">Buy a Tour Without Leaving Your Home</a>
-                        </h4>
-                        <p class="sub-paragraph actioncall-29">Using our website, you can easily find and book any tour
-                            you
-                            want. Mobile users will definitely enjoy our app available on all devices.</p>
-                        <a href="book.html" class="buttonbg">Book Now</a>
-                    </div>
+    <section class="w3l-call-to-action-29">
+        <div class="cal-action-29">
+            <div class="wrapper">
+                <div class="action-main-29 align-center">
+                    <h4 class="cal-action-text-29">
+                        Buy a Tour Safari have a new life Experience
+                    </h4>
+                    <p>If you are ever looking for a places to stay in your vacation, Kilimangeti Tanzania Safari have you
+                        covered. We have the most affordable price for our safari packages </p>
+                    <a href="book.html" class="buttonbg">Book Now</a>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
         <!-- //w3l-text-22 -->
         <!-- Text14 block -->
         <section class="w3l-footer-16">
@@ -219,7 +248,7 @@
                     <div class="grid">
                         <div class="column">
                             <h2><a href="index.html" class="logo-2">Kilimangeti Tanzania Safari</a></h2>
-                            <p>All rights reserved.<br>©2019 <a href="http://Kilimangeti Tanzania Safari.com/"
+                            <p>All rights reserved.<br>2021 <a href="http://Kilimangeti Tanzania Safari.com/"
                                     target="_blank">Kilimangeti Tanzania Safari</a>
                             </p>
                         </div>
@@ -235,11 +264,9 @@
                         <div class="column">
                             <h3>Pages</h3>
                             <ul class="footer-gd-16">
-                                <li><a href="Kili-what to know.html">Products</a></li>
+                                <li><a href="./whatforkili.html">whatforkili</a></li>
                                 <li><a href="blog.html">Blog Page</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="login.html">Login</a></li>
-                                <li><a href="signup.html">Signup</a></li>
                             </ul>
                         </div>
                         <div class="column column3">
@@ -284,6 +311,7 @@
                     document.body.scrollTop = 0;
                     document.documentElement.scrollTop = 0;
                 }
+                AOS.init();
             </script>
             <!-- //move top -->
         </section>
