--- a/assets/parks/z2.html
+++ b/assets/parks/z2.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <title> Kilimangeti Tanzania Safari</title>
     <link rel="stylesheet" href="../css/style-freedom.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -308,6 +308,6 @@
     </body>
 
 
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/single.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:55 GMT -->
+    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/single.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:55 GMT -->
 
 </html>
