--- a/team-single.html
+++ b/team-single.html
@@ -68,7 +68,7 @@
     <meta name="robots" content="noindex">
 
     <body>
-        <link rel="stylesheet" href="../../../../../../images/website.css">
+        <link rel="stylesheet" href="../../../../../../images/ Kilimangeti Tanzania Safari.css">
 
 
         <!-- header -->
@@ -320,6 +320,6 @@
     </body>
 
 
-    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/team-single.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
+    <!-- Mirrored from demo.Kilimangeti Tanzania Safari.com/demosWTR/Freedom/19-07-2020/moses/1269922037/web/team-single.html by HTTrack  Kilimangeti Tanzania Safari Copier/3.x [XR&CO'2014], Sat, 02 Jan 2021 17:02:52 GMT -->
 
 </html>
